--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,27 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weather App</title>
+    <title>Crank's Weather</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../public/styles/main.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <div class="container">
       <div class="row">
           <div class="col-md-6 offset-md-3">
+            <div class="container col-5">
+              <img src="./images/logo.png" alt="app logo" class="img-fluid">
+            </div>
               <div class="search-bar-container">
                 <form action="/" method="GET">
                   <input type="text" class="form-control" name="city" placeholder="Enter City Name">
-                  <button type="submit" class="btn btn-primary">Get Weather</button>
+                  <a href="/"><button type="submit" class="bn632-hover bn24">Get Weather</button></a>
               </form>               
               </div>
               <% if(weather) { %>
-                  <div class="weather-result mt-4">
+                  <div class="container col-6 weather-result mt-4 text app">
                       <h2>Weather in <%= weather.name %></h2>
                       <p>Temperature: <%= weather.main.temp %>°C</p>
                       <p>Weather: <%= weather.weather[0].main %></p>
