--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,49 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crank's Weather</title>
-    <link rel="icon" href="./images/head_logo.png" type="image/x-icon">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./styles/main.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-          <div class="col-md-6 offset-md-3">
-            <div class="container col-5">
-              <img src="./images/logo.png" alt="app logo" class="img-fluid">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Crank's Weather</title>
+  <link rel="icon" href="./images/head_logo.png" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./styles/main.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <div class="container col-5">
+          <img src="./images/logo.png" alt="app logo" class="img-fluid">
+        </div>
+        <div class="search-bar-container">
+          <form action="/" method="GET">
+            <input type="text" class="form-control" name="city" placeholder="Enter City Name">
+            <button type="submit" class="bn632-hover bn24">Get Weather</button>
+          </form>
+        </div>
+        <% if(weatherData) { %>
+        <div class="weather-result mt-4 text app">
+          <h2 class="text-center mb-4">Weather in <%= city %></h2>
+
+          <div class="current-weather-container">
+            <div class="current-weather">
+              <p>Temperature: <%= weatherData.current.temp %>°C</p>
+              <p>Feels like: <%= weatherData.current.feels_like %>°C</p>
+              <p>Weather: <%= weatherData.current.weather[0].description %></p>
+              <p>Wind Speed: <%= weatherData.current.wind_speed %> km/h</p>
+              <p>Humidity: <%= weatherData.current.humidity %> %</p>
             </div>
-              <div class="search-bar-container">
-                <form action="/" method="GET">
-                  <input type="text" class="form-control" name="city" placeholder="Enter City Name">
-                  <a href="/"><button type="submit" class="bn632-hover bn24">Get Weather</button></a>
-              </form>               
-              </div>
-              <% if(weather) { %>
-                <div class="container col-6 weather-result mt-4 text app">
-                  <h2>Weather in <%= city %></h2>
-                  <p>Temperature: <%= weather.current.temp %>°C</p>
-                  <p>Feels like: <%= weather.current.feels_like %>°C</p>
-                  <% if(weather.current.weather && weather.current.weather.length > 0) { %>
-                    <p>Weather: <%= weather.current.weather[0].description.charAt(0).toUpperCase() + weather.current.weather[0].description.slice(1) %></p>
-                  <% } %>
-                  <p>Wind Speed: <%= weather.current.wind_speed %> km/h</p>
-                  <p>Humidity: <%= weather.current.humidity %> %</p>
-                </div>
-              <% } else { %>
-                <p>No weather data available. Try searching for a city.</p>
-              <% } %>
           </div>
+
+          <div class="hourly-forecast mt-4">
+            <h3>Hourly Forecast</h3>
+            <div class="horizontal-scroll">
+              <div class="d-flex">
+                <% for (let i = 0; i < weatherData.hourly.length; i++) { %>
+                <div class="card mx-2" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= getHourlyForecastDay(weatherData.hourly[i].dt) %></h5>
+                    <p class="card-text">Temp: <%= weatherData.hourly[i].temp %>°C</p>
+                    <p class="card-text">Humidity: <%= weatherData.hourly[i].humidity %>%</p>
+                    <p class="card-text">Weather: <%= weatherData.hourly[i].weather[0].description %></p>
+                  </div>
+                </div>
+                <% } %>
+              </div>
+            </div>
+          </div>
+
+          <div class="daily-forecast mt-4">
+            <h3>Daily Forecast</h3>
+            <div class="horizontal-scroll">
+              <div class="d-flex">
+                <% for (let i = 0; i < weatherData.daily.length; i++) { %>
+                <div class="card mx-2" style="width: 18rem;">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= getFormattedDailyDate(weatherData.daily[i].dt) %></h5>
+                    <p class="card-text">Day Temp: <%= weatherData.daily[i].temp.day %>°C</p>
+                    <p class="card-text">Night Temp: <%= weatherData.daily[i].temp.night %>°C</p>
+                    <p class="card-text">Humidity: <%= weatherData.daily[i].humidity %>%</p>
+                    <p class="card-text">Weather: <%= weatherData.daily[i].weather[0].description %></p>
+                  </div>
+                </div>
+                <% } %>
+              </div>
+            </div>
+          </div>
+          <% } else { %>
+          <p>No weather data available. Try searching for a city.</p>
+          <% } %>
+        </div>
       </div>
+    </div>
   </div>
 
+</body>
 
-  </body>
 </html>
