--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
-<body>
+<body style="background-image: <%= backgroundImage %>;">
   <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
@@ -30,7 +30,11 @@
         <% if(weatherData) { %>
         <div class="weather-result mt-4 text app">
           <h2 class="text-center mb-4 txt">Weather in <%= city %></h2>
-
+          <% if(weatherData) { %>
+          <div class="weather-result mt-4 d-flex justify-content-center">
+            <img src="<%= iconUrl %>" alt="Weather Icon" style="width: 75px; height: auto;">
+          </div>
+          <% } %>
           <div class="current-weather-container">
             <div class="current-weather txt">
               <p>Temperature: <%= weatherData.current.temp %>°C</p>
@@ -84,7 +88,7 @@
       </div>
     </div>
   </div>
-  
+
   <script>
     document.getElementById('current-location-btn').addEventListener('click', function() {
       if (navigator.geolocation) {
