--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,12 @@
   <link rel="stylesheet" href="./styles/main.css" />
 </head>
 
-<body style="background-image: <%= backgroundImage %>;">
+<body style="
+background-image: <%= backgroundImage %>;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center center;
+">
   <div class="container">
     <div class="row">
       <div class="col-md-6 offset-md-3">
